# cudaSIFT

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  cudasift  projectProposal.md
data/: curr_img_pts.pgm  limg_pts.pgm
include/: cudaImage.h  cudaSift.h  cudaSiftH.h  cudautils.h  hello.cuh  hello.h
src/: cudaImage.cu  cudaSift.cpp  cudaSiftD.cu  cudaSiftH.cu  cudaSiftHAsync.cu  hello.cpp  hello.cu  main.cpp  mainSift.cpp  matching.cu
utils/: resize.sh
