cmake_minimum_required(VERSION 3.1)
PROJECT(cudaSift LANGUAGES C CXX CUDA)

set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)
include_directories(include src ${OpenCV_INCLUDE_DIRS})
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
file(GLOB all_SRCS "include/*" "src/*")
add_executable(cudaSift ${all_SRCS})
set_target_properties(cudaSift PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(cudaSift ${OpenCV_LIBS})
